# esmini

./: .gitmodules  CMakeLists.txt  CMakePresets.json  unittest.txt
3rd_party_terms_and_licenses/: links.txt
EnvironmentSimulator/Applications/esmini/: CMakeLists.txt  main.cpp
EnvironmentSimulator/Applications/esmini-dyn/: main.cpp
EnvironmentSimulator/Applications/odrviewer/: main.cpp
EnvironmentSimulator/Applications/replayer/: Replay.cpp  main.cpp
EnvironmentSimulator/Libraries/esminiLib/: CMakeLists.txt  esminiLib.cpp  esminiLib.hpp
EnvironmentSimulator/Libraries/esminiRMLib/: esminiRMLib.cpp  esminiRMLib.hpp
EnvironmentSimulator/Modules/CommonMini/: CommonMini.cpp  CommonMini.hpp  UDP.cpp  Utils.h  logger.cpp  logger.hpp
EnvironmentSimulator/Modules/Controllers/: Controller.cpp  ControllerACC.cpp  ControllerALKS_R157SM.cpp  ControllerECE_ALKS_RefDriver.cpp  ControllerExternal.cpp  ControllerFollowGhost.cpp  ControllerLooming.cpp  (+9 more)
EnvironmentSimulator/Unittest/: CMakeLists.txt  CommonMini_test.cpp  FollowRouteController_test.cpp  FollowRoute_test.cpp  OperatingSystem_test.cpp  RoadManagerDll_test.cpp  RoadManager_test.cpp  ScenarioEngineDll_test.cpp  ScenarioEngine_test.cpp  ScenarioPlayer_test.cpp  TestHelper.cpp  TestHelper.hpp
Hello-World_coding-example/: CMakeLists.txt
OSMP_FMU/: CMakeLists.txt
docs/: user_guide.adoc
resources/xosc/: natural_driver-parameter-test.xosc  natural_driver-test.xosc
scripts/: generate_traffic.py  run_tests.sh
scripts/scenario_scripts/: generate_traffic.py  test_traffic.py
test/: alks_suite.py  smoke_test.py
(+45 files in other folders)
